--- a/actions/create_namespace.yaml
+++ b/actions/create_namespace.yaml
@@ -1,5 +1,5 @@
 name: createCoreV1Namespace
-pack: kubernetes
+pack: k8s
 runner_type: python-script
 description: "create a Namespace"
 enabled: true
